# aws-emr-launch

./: .gitignore  CHANGELOG.md  Config  MANIFEST.in  Pipfile  README.md  THIRD_PARTY  VERSION  buildspec.yaml  fix.sh  lambda_layer_requirements.txt  pyproject.toml  requirements-1.3.x.txt  requirements-1.4.x.txt  requirements-1.5.x.txt  requirements-2.x.txt  requirements-dev.in  requirements-dev.txt  requirements-lambda-layer.txt  requirements.txt  setup.cfg  setup.py  tox.ini  validate.sh
.github/workflows/: static-checking.yml
aws_emr_launch/: __init__.py
aws_emr_launch/constructs/: base.py
aws_emr_launch/control_plane/: __init__.py
codepipeline/: README.md  cdk.json  codepipeline_shared_resources.py  cross_account_codecommit_resources.py  deployment_pipeline.py  environment_vars.sh  example-cdk.json  examples-buildspec.yaml  examples-pipeline-buildspec.yaml  examples-projects-buildspec.yaml  examples_pipeline.py  release-buildspec.yaml  release_pipeline.py  requirements.txt
control_plane/: app.py  requirements.txt
control_plane/constructs/: control_plane_stack.py
docs/: README.md  emr_launch_usage.md
examples/: README.md  app.py  deploy_all.sh  setup.py
examples/cluster_configurations/: app.py
examples/control_plane/: app.py  setup.py
examples/emr_launch_function/: app.py
examples/emr_launch_functions/: app.py
examples/emr_profiles/: app.py
examples/environment_stack/: app.py
examples/list_describe/: app.py
examples/persisent_cluster_pipeline/: app.py
examples/profile_components/: app.py
tests/: __init__.py  test_security_groups.py
(+255 files in other folders)
