[metadata]
license_files =
  LICENSE
  NOTICE
  VERSION

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .venv,
    cdk.out

[mypy]
python_version = 3.7
strict = True
ignore_missing_imports = True
allow_untyped_decorators = True
exclude = extras/|cdk.out/|terraform_pipeline/|spark_batch_orchestration/

[zest.releaser]
release = no
